--- a/package.json
+++ b/package.json
@@ -5,10 +5,23 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/progress": "^0.2.7",
+        "framer-motion": "^7.6.19",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
