--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/progress": "^0.2.7",
         "framer-motion": "^7.6.19",
+        "google-map-react": "^2.2.0",
+        "popmotion": "^11.0.5",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-indiana-drag-scroll": "^2.2.0",
+        "react-modal": "^3.16.1",
+        "react-rating": "^2.0.5",
+        "tailwind-scrollbar-hide": "^1.1.7"
     }
 }
