--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/jquery": "^3.5.14",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.6.0",
@@ -22,8 +23,12 @@
         "@inertiajs/progress": "^0.2.7",
         "framer-motion": "^7.6.19",
         "google-map-react": "^2.2.0",
+        "jquery": "^3.6.3",
+        "momentjs": "^2.0.0",
+        "multiselect-react-dropdown": "^2.0.25",
         "popmotion": "^11.0.5",
         "react": "^18.2.0",
+        "react-big-calendar": "^1.5.2",
         "react-dom": "^18.2.0",
         "react-indiana-drag-scroll": "^2.2.0",
         "react-modal": "^3.16.1",
